pydantic custom data validataion using fiead, annotaded and other function

--- a/01-Pydantic-Data-Validation/Pydantic-Intermediate/00_why_pydantic.ipynb
+++ b/01-Pydantic-Data-Validation/Pydantic-Intermediate/00_why_pydantic.ipynb
@@ -233,8 +233,265 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "acab542c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Md Al Amin\n",
+      "['item1', 'item2']\n",
+      "{'phone': '017xxxx', 'emergency_contact': '019xxxx'}\n",
+      "019xxxx\n",
+      "====data inserted====\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Patient(BaseModel):\n",
+    "    name: str\n",
+    "    age: int\n",
+    "    weight: float\n",
+    "    married: bool\n",
+    "    allergies: List[str]  # use List instead of use list because we want to validate 2 label validation like Must be list and in the list data will be str\n",
+    "    contact_details: Dict[str, str]\n",
+    "    \n",
+    "def insert_patient_data(patient: Patient):\n",
+    "    print(patient.name)\n",
+    "    print(patient.allergies)\n",
+    "    print(patient.contact_details)\n",
+    "    print(patient.contact_details['emergency_contact'])\n",
+    "    \n",
+    "    print(\"====data inserted====\")\n",
+    "    \n",
+    "    \n",
+    "profile = {\n",
+    "    \"name\": \"Md Al Amin\",\n",
+    "    \"age\": 25,\n",
+    "    \"weight\": 67.0,\n",
+    "    \"married\": False,\n",
+    "    \"allergies\": [\"item1\", \"item2\"],\n",
+    "    \"contact_details\": {\n",
+    "        \"phone\": \"017xxxx\",\n",
+    "        \"emergency_contact\": \"019xxxx\"\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "p001 = Patient(**profile)\n",
+    "insert_patient_data(p001)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9bd79ae6",
+   "metadata": {},
+   "source": [
+    "### Option field\n",
+    "- by default pydantic all data is required if we want we can set optional field\n",
+    "- have to puss default value"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "375ab68d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Md Al Amin\n",
+      "['item1', 'item2']\n",
+      "False\n",
+      "{'phone': '017xxxx', 'emergency_contact': '019xxxx'}\n",
+      "019xxxx\n",
+      "====data inserted====\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Patient(BaseModel):\n",
+    "    name: str\n",
+    "    age: int\n",
+    "    weight: float\n",
+    "    married: Optional[bool] = False\n",
+    "    allergies: List[str]  # use List instead of use list because we want to validate 2 label validation like Must be list and in the list data will be str\n",
+    "    contact_details: Dict[str, str]\n",
+    "    \n",
+    "def insert_patient_data(patient: Patient):\n",
+    "    print(patient.name)\n",
+    "    print(patient.allergies)\n",
+    "    print(patient.married)\n",
+    "    print(patient.contact_details)\n",
+    "    print(patient.contact_details['emergency_contact'])\n",
+    "    \n",
+    "    print(\"====data inserted====\")\n",
+    "    \n",
+    "    \n",
+    "profile = {\n",
+    "    \"name\": \"Md Al Amin\",\n",
+    "    \"age\": 25,\n",
+    "    \"weight\": 67.0,\n",
+    "    \n",
+    "    \"allergies\": [\"item1\", \"item2\"],\n",
+    "    \"contact_details\": {\n",
+    "        \"phone\": \"017xxxx\",\n",
+    "        \"emergency_contact\": \"019xxxx\"\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "p001 = Patient(**profile)\n",
+    "insert_patient_data(p001)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b655e45a",
+   "metadata": {},
+   "source": [
+    "# ***Pydantic build-in data Validation-Common Case***"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "6a1346cc",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Md Al Amin\n",
+      "['item1', 'item2']\n",
+      "False\n",
+      "{'phone': '017xxxx', 'emergency_contact': '019xxxx'}\n",
+      "019xxxx\n",
+      "hello@nsu.com   https://hello.com/\n",
+      "====data inserted====\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pydantic import EmailStr, AnyUrl\n",
+    "\n",
+    "class Patient(BaseModel):\n",
+    "    name: str\n",
+    "    age: int\n",
+    "    email: EmailStr\n",
+    "    linkedin_url: AnyUrl\n",
+    "    weight: float\n",
+    "    married: Optional[bool] = False\n",
+    "    allergies: List[str]  # use List instead of use list because we want to validate 2 label validation like Must be list and in the list data will be str\n",
+    "    contact_details: Dict[str, str]\n",
+    "    \n",
+    "def insert_patient_data(patient: Patient):\n",
+    "    print(patient.name)\n",
+    "    print(patient.allergies)\n",
+    "    print(patient.married)\n",
+    "    print(patient.contact_details)\n",
+    "    print(patient.contact_details['emergency_contact'])\n",
+    "    print(patient.email, \" \", patient.linkedin_url)\n",
+    "    \n",
+    "    print(\"====data inserted====\")\n",
+    "    \n",
+    "    \n",
+    "profile = {\n",
+    "    \"name\": \"Md Al Amin\",\n",
+    "    \"age\": 25,\n",
+    "    \"weight\": 67.0,\n",
+    "    \"email\": \"hello@nsu.com\",\n",
+    "    \"linkedin_url\": \"https://hello.com\",\n",
+    "    \"allergies\": [\"item1\", \"item2\"],\n",
+    "    \"contact_details\": {\n",
+    "        \"phone\": \"017xxxx\",\n",
+    "        \"emergency_contact\": \"019xxxx\"\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "p001 = Patient(**profile)\n",
+    "insert_patient_data(p001)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "34d99f54",
+   "metadata": {},
+   "source": [
+    "## Use Field Function for data validation.\n",
+    "- add custom description or metadata.\n",
+    "- set range on the data e.g. gt and le"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "e367b004",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Md Al Amin\n",
+      "['item1', 'item2']\n",
+      "False\n",
+      "{'phone': '017xxxx', 'emergency_contact': '019xxxx'}\n",
+      "019xxxx\n",
+      "hello@nsu.com   https://hello.com/\n",
+      "====data inserted====\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pydantic import EmailStr, AnyUrl\n",
+    "from typing import Annotated\n",
+    "\n",
+    "class Patient(BaseModel):\n",
+    "    name: str = Field(description=\"This is user name\", max_length=10, examples=\"Md Al amin\", title=\"Name of the patient.\")\n",
+    "    age: int = Field(gt=20, le=40, default=33)\n",
+    "    email: EmailStr\n",
+    "    linkedin_url: AnyUrl\n",
+    "    weight: Annotated[float, Field(strict=True)]\n",
+    "    married: Annotated[Optional[bool], Field(default=False, description=\"Patient married status.\")]\n",
+    "    allergies: List[str]  # use List instead of use list because we want to validate 2 label validation like Must be list and in the list data will be str\n",
+    "    contact_details: Dict[str, str]\n",
+    "    \n",
+    "def insert_patient_data(patient: Patient):\n",
+    "    print(patient.name)\n",
+    "    print(patient.allergies)\n",
+    "    print(patient.married)\n",
+    "    print(patient.contact_details)\n",
+    "    print(patient.contact_details['emergency_contact'])\n",
+    "    print(patient.email, \" \", patient.linkedin_url)\n",
+    "    \n",
+    "    print(\"====data inserted====\")\n",
+    "    \n",
+    "    \n",
+    "profile = {\n",
+    "    \"name\": \"Md Al Amin\",\n",
+    "    \"age\": 25,\n",
+    "    \"weight\": 67,\n",
+    "    \"email\": \"hello@nsu.com\",\n",
+    "    \"linkedin_url\": \"https://hello.com\",\n",
+    "    \"allergies\": [\"item1\", \"item2\"],\n",
+    "    \"contact_details\": {\n",
+    "        \"phone\": \"017xxxx\",\n",
+    "        \"emergency_contact\": \"019xxxx\"\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "p001 = Patient(**profile)\n",
+    "insert_patient_data(p001)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4004934",
    "metadata": {},
    "outputs": [],
    "source": []
