pydantic field_validator, and its mode as before and after

--- a/01-Pydantic-Data-Validation/Pydantic-Intermediate/01_field_validator.ipynb
+++ b/01-Pydantic-Data-Validation/Pydantic-Intermediate/01_field_validator.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "43a2cb98",
    "metadata": {},
    "outputs": [
@@ -19,7 +19,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Md Al Amin\n",
+      "MD AL AMIN\n",
       "['item1', 'item2']\n",
       "False\n",
       "{'phone': '017xxxx', 'emergency_contact': '019xxxx'}\n",
@@ -55,6 +55,13 @@
     "        return value\n",
     "    \n",
     "    \n",
+    "    # my goal is name will be capital always\n",
+    "    @field_validator('name')\n",
+    "    @classmethod\n",
+    "    def transform_name(cls, value):\n",
+    "        return value.upper()\n",
+    "    \n",
+    "    \n",
     "    \n",
     "def insert_patient_data(patient: Patient):\n",
     "    print(patient.name)\n",
@@ -86,9 +93,225 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "9791187a",
+   "metadata": {},
+   "source": [
+    "## ***Field validator mode [before, after]***\n",
+    "- **Before**: Before type-casting value will be get in the field validator\n",
+    "- **After**: After typecasting value will be get the field validator\n",
+    "\n",
+    "```python\n",
+    "@field_validator(age, mode=before)\n",
+    "@classmethod\n",
+    "def validator_age(cls, value):\n",
+    "    if 0 < value < 50:\n",
+    "        return value\n",
+    "    else:\n",
+    "        raise ValueError(\"Age is not valid\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ad61c13b",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "TypeError",
+     "evalue": "'<' not supported between instances of 'int' and 'str'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 71\u001b[39m\n\u001b[32m     54\u001b[39m     \u001b[38;5;28mprint\u001b[39m(\u001b[33m\"\u001b[39m\u001b[33m====data inserted====\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     57\u001b[39m profile = {\n\u001b[32m     58\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mname\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m\"\u001b[39m\u001b[33mMd Al Amin\u001b[39m\u001b[33m\"\u001b[39m,\n\u001b[32m     59\u001b[39m     \u001b[33m\"\u001b[39m\u001b[33mage\u001b[39m\u001b[33m\"\u001b[39m: \u001b[33m'\u001b[39m\u001b[33m25\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m   (...)\u001b[39m\u001b[32m     68\u001b[39m     },\n\u001b[32m     69\u001b[39m }\n\u001b[32m---> \u001b[39m\u001b[32m71\u001b[39m p001 = \u001b[43mPatient\u001b[49m\u001b[43m(\u001b[49m\u001b[43m*\u001b[49m\u001b[43m*\u001b[49m\u001b[43mprofile\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     72\u001b[39m insert_patient_data(p001)\n",
+      "    \u001b[31m[... skipping hidden 1 frame]\u001b[39m\n",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[9]\u001b[39m\u001b[32m, line 39\u001b[39m, in \u001b[36mPatient.age_validator\u001b[39m\u001b[34m(cls, value)\u001b[39m\n\u001b[32m     36\u001b[39m \u001b[38;5;129m@field_validator\u001b[39m(\u001b[33m'\u001b[39m\u001b[33mage\u001b[39m\u001b[33m'\u001b[39m, mode=\u001b[33m\"\u001b[39m\u001b[33mbefore\u001b[39m\u001b[33m\"\u001b[39m)\n\u001b[32m     37\u001b[39m \u001b[38;5;129m@classmethod\u001b[39m\n\u001b[32m     38\u001b[39m \u001b[38;5;28;01mdef\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34mage_validator\u001b[39m(\u001b[38;5;28mcls\u001b[39m, value):\n\u001b[32m---> \u001b[39m\u001b[32m39\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[32;43m0\u001b[39;49m\u001b[43m \u001b[49m\u001b[43m<\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m \u001b[49m\u001b[43m<\u001b[49m\u001b[43m \u001b[49m\u001b[32;43m50\u001b[39;49m:\n\u001b[32m     40\u001b[39m         \u001b[38;5;28;01mreturn\u001b[39;00m value\n\u001b[32m     41\u001b[39m     \u001b[38;5;28;01melse\u001b[39;00m:\n",
+      "\u001b[31mTypeError\u001b[39m: '<' not supported between instances of 'int' and 'str'"
+     ]
+    }
+   ],
+   "source": [
+    "from pydantic import BaseModel, EmailStr, AnyUrl, Field, field_validator, model_validator\n",
+    "from typing import List, Dict, Literal, Annotated, Optional\n",
+    "\n",
+    "class Patient(BaseModel):\n",
+    "    name: str \n",
+    "    age: int \n",
+    "    email: EmailStr\n",
+    "    linkedin_url: AnyUrl\n",
+    "    weight: float\n",
+    "    married: bool\n",
+    "    allergies: List[str] \n",
+    "    contact_details: Dict[str, str]\n",
+    "    \n",
+    "    ## The goal is to checking in the email is northsouth email or not.\n",
+    "    @field_validator('email')\n",
+    "    @classmethod\n",
+    "    def email_validator(cls, value):   # using 'cls' variable i can use other method in the class by cls variable\n",
+    "        valid_domain = ['nsu.edu', 'iub.edu']\n",
+    "        \n",
+    "        domain_name = value.split('@')[-1]\n",
+    "        \n",
+    "        if domain_name not in valid_domain:\n",
+    "            raise ValueError(\"Not the valid domain Student\")\n",
+    "        \n",
+    "        return value\n",
+    "    \n",
+    "    \n",
+    "    # my goal is name will be capital always\n",
+    "    @field_validator('name')\n",
+    "    @classmethod\n",
+    "    def transform_name(cls, value):\n",
+    "        return value.upper()\n",
+    "    \n",
+    "    \n",
+    "    ## to check age is in the range or not\n",
+    "    @field_validator('age', mode=\"before\")\n",
+    "    @classmethod\n",
+    "    def age_validator(cls, value):\n",
+    "        if 0 < value < 50:\n",
+    "            return value\n",
+    "        else:\n",
+    "            raise ValueError(\"Age should be int and less than 50\")\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "def insert_patient_data(patient: Patient):\n",
+    "    print(patient.name)\n",
+    "    print(patient.allergies)\n",
+    "    print(patient.married)\n",
+    "    print(patient.contact_details)\n",
+    "    # print(patient.contact_details['emergency_contact'])\n",
+    "    # print(patient.email, \" \", patient.linkedin_url)\n",
+    "    \n",
+    "    print(\"====data inserted====\")\n",
+    "    \n",
+    "    \n",
+    "profile = {\n",
+    "    \"name\": \"Md Al Amin\",\n",
+    "    \"age\": '25',\n",
+    "    \"weight\": 67,\n",
+    "    \"married\": False,\n",
+    "    \"email\": \"hello@nsu.edu\",\n",
+    "    \"linkedin_url\": \"https://hello.com\",\n",
+    "    \"allergies\": [\"item1\", \"item2\"],\n",
+    "    \"contact_details\": {\n",
+    "        \"phone\": \"017xxxx\",\n",
+    "        \"emergency_contact\": \"019xxxx\"\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "p001 = Patient(**profile)\n",
+    "insert_patient_data(p001)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "236021f3",
+   "metadata": {},
+   "source": [
+    "#### **Same code working on the `mode=after` because\n",
+    "- first typecasting and get the value field validator"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "e0d0ba7e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MD AL AMIN\n",
+      "['item1', 'item2']\n",
+      "False\n",
+      "{'phone': '017xxxx', 'emergency_contact': '019xxxx'}\n",
+      "====data inserted====\n"
+     ]
+    }
+   ],
+   "source": [
+    "from pydantic import BaseModel, EmailStr, AnyUrl, Field, field_validator, model_validator\n",
+    "from typing import List, Dict, Literal, Annotated, Optional\n",
+    "\n",
+    "class Patient(BaseModel):\n",
+    "    name: str \n",
+    "    age: int \n",
+    "    email: EmailStr\n",
+    "    linkedin_url: AnyUrl\n",
+    "    weight: float\n",
+    "    married: bool\n",
+    "    allergies: List[str] \n",
+    "    contact_details: Dict[str, str]\n",
+    "    \n",
+    "    ## The goal is to checking in the email is northsouth email or not.\n",
+    "    @field_validator('email')\n",
+    "    @classmethod\n",
+    "    def email_validator(cls, value):   # using 'cls' variable i can use other method in the class by cls variable\n",
+    "        valid_domain = ['nsu.edu', 'iub.edu']\n",
+    "        \n",
+    "        domain_name = value.split('@')[-1]\n",
+    "        \n",
+    "        if domain_name not in valid_domain:\n",
+    "            raise ValueError(\"Not the valid domain Student\")\n",
+    "        \n",
+    "        return value\n",
+    "    \n",
+    "    \n",
+    "    # my goal is name will be capital always\n",
+    "    @field_validator('name')\n",
+    "    @classmethod\n",
+    "    def transform_name(cls, value):\n",
+    "        return value.upper()\n",
+    "    \n",
+    "    \n",
+    "    ## to check age is in the range or not\n",
+    "    @field_validator('age', mode=\"after\")\n",
+    "    @classmethod\n",
+    "    def age_validator(cls, value):\n",
+    "        if 0 < value < 50:\n",
+    "            return value\n",
+    "        else:\n",
+    "            raise ValueError(\"Age should be int and less than 50\")\n",
+    "    \n",
+    "    \n",
+    "    \n",
+    "def insert_patient_data(patient: Patient):\n",
+    "    print(patient.name)\n",
+    "    print(patient.allergies)\n",
+    "    print(patient.married)\n",
+    "    print(patient.contact_details)\n",
+    "    # print(patient.contact_details['emergency_contact'])\n",
+    "    # print(patient.email, \" \", patient.linkedin_url)\n",
+    "    \n",
+    "    print(\"====data inserted====\")\n",
+    "    \n",
+    "    \n",
+    "profile = {\n",
+    "    \"name\": \"Md Al Amin\",\n",
+    "    \"age\": '25',\n",
+    "    \"weight\": 67,\n",
+    "    \"married\": False,\n",
+    "    \"email\": \"hello@nsu.edu\",\n",
+    "    \"linkedin_url\": \"https://hello.com\",\n",
+    "    \"allergies\": [\"item1\", \"item2\"],\n",
+    "    \"contact_details\": {\n",
+    "        \"phone\": \"017xxxx\",\n",
+    "        \"emergency_contact\": \"019xxxx\"\n",
+    "    },\n",
+    "}\n",
+    "\n",
+    "p001 = Patient(**profile)\n",
+    "insert_patient_data(p001)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad61c13b",
+   "id": "0ac6086b",
    "metadata": {},
    "outputs": [],
    "source": []
