very basics chatbot assistant using llm powerd

--- a/02-LangChain-Basics/Assignment-00/smiple-assistant.ipynb
+++ b/02-LangChain-Basics/Assignment-00/smiple-assistant.ipynb
@@ -153,7 +153,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "d9a85f99",
    "metadata": {},
    "outputs": [
@@ -171,7 +171,7 @@
    "source": [
     "response = chain.invoke(\n",
     "    {\n",
-    "        \"input\": \"Sumsang s24 ultra\"\n",
+    "        \"input\": \"Samsung s24 ultra\"\n",
     "    }\n",
     ")\n",
     "response"
