exploring sentence embedding

--- a/02-LangChain-Basics/2.2-Embedding/embedding.ipynb
+++ b/02-LangChain-Basics/2.2-Embedding/embedding.ipynb
@@ -44892,8 +44892,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "id": "3d622182",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[3.76929385, 3.39429513, 2.20812812]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics.pairwise import euclidean_distances\n",
+    "\n",
+    "euclidean_distances([my_query_emb], doc_embed)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "93d77136",
+   "metadata": {},
+   "source": [
+    "## in euclidean distance high similarity is lowest value.\n",
+    "- Cosine Similarity is [-1, 1] and its based on angle.\n",
+    "- L2 distance [0, infinity.]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "be53bcf1",
    "metadata": {},
    "outputs": [],
    "source": []
